# ChessQt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chessQt_local.bat  chessQt_remote.bat  chess_game.cpp  chess_game.h  chess_pieces.cpp  chess_pieces.h  clickable_tile_label.h  client.cpp  main.cpp  mainwindow.cpp  mainwindow.h  piece_label.cpp  piece_label.h  resources.qrc  run_chessQt.bat  run_chessQt_local.bat  server.cpp  server.h
game_client/: client.cpp  client.h
game_client/chess_logic/: board_state.cpp  board_state.h  chess_game.cpp  chess_game.h  chess_pieces.cpp  chess_pieces.h
game_client/chess_ui/: clickable_tile_label.cpp  clickable_tile_label.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  piece_label.cpp  piece_label.h
game_server/: clientwrap.cpp  clientwrap.h  database_chess.cpp  database_chess.h  gamesession.cpp  gamesession.h  server.cpp  server.h  server_security.cpp  server_security.h
